--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "terser": "^5.37.0",
     "tslib": "^2.8.1",
     "typescript": "^5.7.3",
-    "vite": "^6.0.11"
+    "vite": "^6.0.11",
+    "vite-plugin-css-injected-by-js": "^3.5.2",
+    "vite-plugin-mkcert": "^1.17.6"
   }
 }
