--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "paginate-ng",
+  "name": "paginate-next",
   "version": "1.0.0",
   "description": "Successor of paginationjs, rewritten in TypeScript without JQuery dependency",
   "keywords": [
