--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
+    "fs-extra": "^11.3.0",
     "rollup": "^4.31.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-sass": "^1.15.2",
